<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_dialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextView.Font.Medium.16"
        android:text="@string/exit"
        android:padding="@dimen/_20dp"
        android:textColor="@color/grey"/>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerColor="@color/light_grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

            <TextView
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextView.Font.Medium.14"
                android:text="@string/exit"
                android:padding="@dimen/_20dp"
                android:textAlignment="center"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/grey"/>
        <TextView
            android:id="@+id/save_and_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextView.Font.Medium.14"
                android:text="@string/save_and_exit"
                android:padding="@dimen/_20dp"
            android:textAlignment="center"
            android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/grey"/>
        <TextView
            android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextView.Font.Medium.14"
                android:text="@string/cancel"
                android:padding="@dimen/_20dp"
            android:textAlignment="center"
            android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/grey"/>

    </LinearLayout>
</LinearLayout>