<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:padding="@dimen/_15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextView.Font.Medium.14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10dp"
            android:text="@string/brush_size" />

        <SeekBar
            android:id="@+id/size_seekBar"
            android:layout_width="@dimen/_200dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:background="@null"
            android:indeterminate="false"
            android:padding="0dp"
            android:paddingStart="@dimen/_10dp"
            android:paddingEnd="@dimen/_10dp"
            android:progressDrawable="@drawable/custome_seekbar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextView.Font.Medium.14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10dp"
            android:text="@string/flow" />

        <SeekBar
            android:id="@+id/flow_seekBar"
            android:layout_width="@dimen/_200dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:background="@null"
            android:indeterminate="false"
            android:padding="0dp"
            android:paddingStart="@dimen/_10dp"
            android:paddingEnd="@dimen/_10dp"
            android:progressDrawable="@drawable/custome_seekbar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextView.Font.Medium.14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10dp"
            android:text="@string/opacity" />

        <SeekBar
            android:id="@+id/opacity_seekBar"
            android:layout_width="@dimen/_200dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:background="@null"
            android:indeterminate="false"
            android:padding="0dp"
            android:paddingStart="@dimen/_10dp"
            android:paddingEnd="@dimen/_10dp"
            android:progressDrawable="@drawable/custome_seekbar" />
    </LinearLayout>

</LinearLayout>